--- a/JavaScript/leccion2/index.html
+++ b/JavaScript/leccion2/index.html
@@ -7,6 +7,6 @@
     <title>JavaScript</title>
 </head>
 <body>
-    <script src="01-01-holamundo.js"></script>
+    <script src="02-01-TiposDatos.js"></script>
 </body>
 </html>
